Fixed checkmark bug and Changed ingredient text spacing

--- a/app/components/recipesGenerateForm.component.css
+++ b/app/components/recipesGenerateForm.component.css
@@ -9,3 +9,9 @@
 #ingredientLabel {
     background-color:  #F2F2F2;
 }
+
+.listFont {
+    font-size: 20;
+    margin-bottom: 12;
+    padding: 5;
+}
